# c-vulkan

./: CMakeLists.txt  README.md
src/: info.h  log.h  main.c  main.cpp  types.h  window.c  window.h
src/renderer/: renderer.c  renderer.h
src/renderer/backend/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_utils.c  vulkan_utils.h
src/renderer/backend/part/: vulkan_backend_debug_callback.inc.c  vulkan_backend_instance.inc.c  vulkan_backend_logical_device.inc.c  vulkan_backend_physical_device.inc.c
src/structs/: slice.c  slice.h
src/utils/: strings.c  strings.h
